# PcapConstrictor

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  config.example.ini
.github/workflows/: ci.yml
docs/: 0001_pcap_constrictor_design.md  0001_tls_scenarios.md  0002_quic_scenarios.md
docs/rfcs/: 0002-pcapflowlab-reuse-plan.md
src/: main.cpp
src/bytes/: ByteReader.hpp  Endian.hpp
src/checksum/: Checksum.cpp  Checksum.hpp
src/cli/: Options.cpp  Options.hpp
src/config/: Config.cpp  Config.hpp
src/constrict/: DecisionLog.cpp  DecisionLog.hpp  PacketDecision.hpp
src/decode/: PacketDecode.cpp  PacketDecode.hpp
src/pcap/: CaptureFormat.cpp  CaptureFormat.hpp  ClassicPcapFormat.hpp  ClassicPcapReader.cpp  ClassicPcapReader.hpp  ClassicPcapWriter.cpp  ClassicPcapWriter.hpp  LinkType.hpp  PacketRecord.hpp  PcapNgFormat.hpp  PcapNgReader.cpp  PcapNgReader.hpp  PcapNgWriter.cpp  PcapNgWriter.hpp
src/quic/: QuicConstrictor.cpp  QuicConstrictor.hpp
src/stats/: Stats.cpp  Stats.hpp
src/tls/: TlsConstrictor.cpp  TlsConstrictor.hpp
tests/: ConfigParsingTests.cpp  DecisionLogFixtureTest.cpp  GoldenWorkflowTests.cpp  PcapNgFixtureTest.cpp  QuicFixtureTest.cpp  ReinflateChecksumPolicyTest.cpp  TestHelpers.cpp  TestHelpers.hpp  TestMain.cpp  TlsContinuationPolicyTest.cpp  TlsFixtureTest.cpp  TruncatedTailFixtureTest.cpp
tests/fixtures/: README.md
tests/fixtures/golden/ipv6_ipv4_test_1/: constrict.ini  constricted.pcap  input.pcap  reinflated_preserve_checksum.pcap  reinflated_recompute_checksum.pcap
tests/fixtures/golden/quic_test_2/: constricted.pcap  input.pcap  reinflate_recompute.ini  reinflated_preserve_checksum.pcap  reinflated_recompute_checksum.pcap
tests/fixtures/golden/tls_test_2/: input.pcap  reinflate_preserve.ini  reinflated_preserve_checksum.pcap  reinflated_recompute_checksum.pcap
tests/fixtures/pcapng/: tls_quic_test_1.pcapng
tests/fixtures/quic/: quic_test_1.pcap
tests/fixtures/tls/: tls_test_1.pcap
tests/fixtures/truncated/: truncated_tail_test_1.pcap
